--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,6 +5,7 @@
       <a href="https://github.com/mrdhat" target="_blank">GitHub</a>
       <a href="https://twitter.com/mrdhat" target="_blank">Twitter</a>
       <a href="https://linkedin.com/in/mrdhat" target="_blank">LinkedIn</a>
+      <a href="{{ "index.xml" | absURL }}" target="_blank">RSS</a>
     </div>
     {{ if $.Site.Copyright }}
       <div class="copyright copyright--user">
